# bingclaw-to-hysea

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_simulation.sh  run_workflow.py  run_workflow_example.py
IO_bingclaw/: setrun_template.py
inputs/bingclaw_inputs/: setrun_template.py
inputs/hysea_inputs/: MessinaGEBCO_forHySEA_HR.nc  hysea_input.template  hysea_input_ts.template
py/: remove_first_timestep.py  run_bingclaw.py  run_hysea.py  run_interface_module.py
