[tool.poetry]
name = "bingclaw-to-hysea"
version = "0.1.0"
description = ""
authors = ["valemagni <valentina.magni@ngi.no>"]
readme = "README.md"
packages = [{include = "bingclaw_to_hysea"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
datetime = "^5.4"
numpy = "^1.26.4"
pathlib = "^1.0.1"
scipy = "^1.12.0"
netcdf4 = "^1.6.5"
seissolxdmf = "^0.1.1"
vtk = "^9.3.0"
pyvista = "^0.43.3"
pyproj = "^3.6.1"
python-util = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
